changed styles and structure of index.html, including messages and buttons

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
+    <div class="container allauth-container">
         <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12 m6 offset-m3">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
