--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -9,20 +9,19 @@
 {% block inner_content %}
     <div class="row">
         <div class="col s12">
-            <h2>{% trans "Sign In" %}</h2>
+            <h2 class="brown-text text-darken-3">{% trans "Sign In" %}</h2>
 
             {% get_providers as socialaccount_providers %}
 
             {% if socialaccount_providers %}
-            <p>{% blocktrans with site.name as site_name %}Please sign in with one
-            of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-            for an account and sign in below:{% endblocktrans %}</p>
+            <p>{% blocktrans with site.name as site_name %}Please sign in with your Google account 
+            or <a class="cyan-text text-darken-1" href="{{ signup_url }}">sign up</a> for a new account with your email address:{% endblocktrans %}</p>
 
-            <div class="socialaccount_ballot">
+            <div class="socialaccount_ballot mt-50">
 
-            <ul class="socialaccount_providers">
-                {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-            </ul>
+                <ul class="socialaccount_providers">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                </ul>
 
             <div class="login-or">{% trans 'or' %}</div>
 
@@ -34,19 +33,28 @@
             <p>{% blocktrans %}If you have not created an account yet, then please
             <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
             {% endif %}
-        </div>
+        
 
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}
+            {{ form.login | materializecss }}
+            {{ form.password | materializecss }}
+            
+            <div class="col s12 mt-20">
+                <input name="remember" id="id_remember" type="checkbox" class="filled-in" checked="checked" />
+                <label for="id_remember">Remember me?</label>
+            </div>
+            
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+            <div class="input-field col s12 mt-20">
+                <a class="header cyan-text text-darken-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+            </div>
+            <div class="input-field col s12 mt-50">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit">{% trans "Sign In" %}</button>
+            </div>
+        </form>
     </div>
-    
-
-    <form class="login" method="POST" action="{% url 'account_login' %}">
-    {% csrf_token %}
-    {{ form | materializecss }}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-    </form>
-
+</div>
 {% endblock %}
