--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,6 +68,11 @@ p {
     padding: 10%;
 }
 
+.allauth-container {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+}
 
 /* ---------- Navbar ------------ */
 
