--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -6,15 +6,17 @@
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
 <li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
+	<a title="{{brand.name}}" class="socialaccount_provider {{provider.id}} {{brand.id}}"
+		href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">
+		<img class="hoverable" width="250" alt="Sign In With Google" src="{{ MEDIA_URL }}btn_google_signin_light_normal_web@2x.png">
+    </a>
 </li>
 {% endfor %}
 {% endif %}
 <li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
+	<a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}"
+		href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+        <img class="hoverable" width="250" alt="Sign In With Google" src="{{ MEDIA_URL }}btn_google_signin_light_normal_web@2x.png">
+    </a>
 </li>
 {% endfor %}
