--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -5,9 +5,10 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block inner_content %}
-
-<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
-
-
-<p>{% trans "This account is inactive." %}</p>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Account Inactive" %}</h2>
+        <p>{% trans "This account is inactive." %}</p>
+    </div>
+</div>
 {% endblock %}
