--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,27 +7,27 @@
 
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Confirm E-mail Address" %}</h2>
 
-{% if confirmation %}
+        {% if confirmation %}
+        {% user_display confirmation.email_address.user as user_display %}
 
-{% user_display confirmation.email_address.user as user_display %}
+        <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a class="cyan-text text-darken-1" href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+        <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+        {% csrf_token %}
+            <div class="input-field col s12 mt-20">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit">{% trans 'Confirm' %}</button>
+            </div>
+        </form>
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+        {% else %}
+        {% url 'account_email' as email_url %}
 
-{% else %}
+        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a class="cyan-text text-darken-1" href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
+        {% endif %}
 
 {% endblock %}
