--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,20 +5,27 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Sign Out" %}</h2>
 
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button id="button-signout" type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            
+            <div class="input-field col s12 mt-20">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit">{% trans 'Sign Out' %}</button>
+            </div>
+            <div class="input-field col s12 mt-20">
+                <a class="header cyan-text text-darken-3" href="{% url 'home' %}">Cancel</a>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
