--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,22 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load materializecss %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Set Password" %}</h1>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Set Password" %}</h2>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set mt-20">
+            {% csrf_token %}
+            {{ form | materializecss }}
+            <div class="input-field col s12 mt-50">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit" name="action" value="{% trans 'Set Password' %}">Set Password</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
