--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,15 +1,21 @@
 {% extends "account/base.html" %}
 
+{% load materializecss %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Change Password" %}</h2>
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change mt-20">
+            {% csrf_token %}
+            {{ form | materializecss }}
+            <div class="input-field col s12 mt-50">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit" name="action">{% trans "Change Password" %}</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
