--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,24 +1,31 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load materializecss %}
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Password Reset" %}</h2>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset mt-20">
+            {% csrf_token %}
+            {{ form | materializecss }}
+            <div class="input-field col s12 mt-50">
+                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit" name="action" value="{% trans 'Reset My Password' %}">Reset My Password</button>
+            </div>
+        </form>
+        <div class="col s12 mt-50">
+            <p class="brown-text text-darken-3">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
