--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,23 +1,29 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load materializecss %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a class="cyan-text text-darken-1" href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            {% if form %}
+                <form method="POST" class="mt-20" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form | materializecss }}
+                    <div class="input-field col s12 mt-50">
+                        <button class="btn waves-effect waves-light deep-purple darken-3" type="submit" name="action" value="{% trans 'change password' %}">Change Password</button>
+                    </div>
+                </form>
+            {% else %}
+                <p>{% trans 'Your password is now changed.' %}</p>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
+</div>
 {% endblock %}
