--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,10 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Change Password" %}</h2>
+        <p>{% trans 'Your password is now changed.' %}</p>
+    </div>
+</div>
 {% endblock %}
