--- a/templates/allauth/account/snippets/already_logged_in.html
+++ b/templates/allauth/account/snippets/already_logged_in.html
@@ -2,4 +2,4 @@
 {% load account %}
 
 {% user_display user as user_display %}
-<p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as {{ user_display }}.{% endblocktrans %}</p>
+<p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as <span class="cyan-text text-darken-1">{{ user_display }}</span>.{% endblocktrans %}</p>
