--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -29,5 +29,6 @@
         <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a class="cyan-text text-darken-1" href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
         {% endif %}
-
+    </div>
+</div>
 {% endblock %}
