--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,6 +21,8 @@
         <div class="row">
             <div class="col s12 m8">
                 <p>This is your profile information</p>
+                {{ profile }}
+
             </div>
             <div class="col s12 m4 center-align">
                 <h5 class="mt-20">My Order History</h5>
