--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                                 <li><a href="{% url 'products' %}" class="dropdown-item">Product Management</a></li>
                                 <li class="divider" tabindex="-1"></li>
                             {% endif %}
-                            <li><a href="#" class="dropdown-item">My Profile</a></li>
+                            <li><a href="{% url 'profile' %}" class="dropdown-item">My Profile</a></li>
                             <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
                         {% else %}
                             <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
