modified tempaltes for socialaccount with correct styles

--- a/templates/allauth/socialaccount/authentication_error.html
+++ b/templates/allauth/socialaccount/authentication_error.html
@@ -2,10 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
-
-{% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
-
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+{% block inner_content %}          
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Social Network Login Failure" %}</h2>
+        <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+    </div>
+</div>
 {% endblock %}
