--- a/templates/allauth/socialaccount/login_cancelled.html
+++ b/templates/allauth/socialaccount/login_cancelled.html
@@ -4,12 +4,12 @@
 
 {% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
 
-{% block content %}
-
-<h1>{% trans "Login Cancelled" %}</h1>
-
-{% url 'account_login' as login_url %}
-
-<p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
-
+{% block inner_content %}
+<div class="row">
+    <div class="col s12">
+        <h2 class="brown-text text-darken-3">{% trans "Login Cancelled" %}</h2>
+        {% url 'account_login' as login_url %}
+        <p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a class="cyan-text text-darken-1" href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
+    </div>
+</div>
 {% endblock %}
