--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,39 +23,27 @@
                 <p>This is your profile information</p>
 
 				<form action="{% url 'profile' %}" method="POST" id="profile-update-form">
-					{% csrf_token %}
-                    <!-- <h5 class="header cyan-text text-darken-3 mt-20">User Info</h5>
+					{% csrf_token %} 
+                    <h5 class="header cyan-text text-darken-3 mt-20">User Info</h5>
 					<div class="card horizontal mt-20">
 						<div class="card-stacked">
                             <div class="card-content">
-                            {% if user.is_authenticated %}
-                                {{ form.username | materializecss:'icon=fas fa-user' }}
-                            {% endif %}
-                            {{ form.email | materializecss:'icon=far fa-envelope' }}
-                            {{ form.first_name | materializecss:'custom_size=s12 m6' }}
-                            {{ form.last_name | materializecss:'custom_size=s12 m6' }}
+                            
                             </div>
 						</div>
-					</div> -->
+					</div>
                     <h5 class="header cyan-text text-darken-3 mt-20">Your Delivery Info</h5>
 					<div class="card horizontal mt-20" id="updadate-delivery-info-form">
 						<div class="card-stacked">
                             <div class="card-content">
-                            {{ form.default_phone_number | materializecss:'icon=fas fa-phone' }}
-                            {{ form.default_street_address_1 | materializecss:'custom_size=s12 m6, icon=fas fa-house-user' }}
-                            {{ form.default_street_address_2 | materializecss:'custom_size=s12 m6' }}
-                            {{ form.default_town_or_city | materializecss:'custom_size=s12 m4' }}
-                            {{ form.default_state | materializecss:'custom_size=s12 m4' }}
-                            {{ form.default_postcode | materializecss:'custom_size=s12 m4' }}
-                            {{ form.default_country | materializecss:'custom_size=s12 m6' }}
+                            {{ form | materializecss }}
                             </div>
                             <div class="card-action">
-                                <a class="cyan-text mx-20" href="{% url 'account_signup' %}">Update Information</a>
+                                <a class="cyan-text mx-20" type="submit">Update Information</a>
                             </div>
 						</div>
 					</div>
 				</form>
-
             </div>
             <div class="col s12 m4 center-align">
                 <h5 class="mt-20">My Order History</h5>
