added post save for user info and delivery info in profiles.views.py, included static js for country selector

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -38,6 +38,7 @@
                             </div>
                             <div class="card-action">
                                 <a class="cyan-text mx-20" type="submit">Update Information</a>
+                                <button>Update Information</button>
                             </div>
 						</div>
 					</div>
@@ -106,4 +107,5 @@
         $('ul.tabs').tabs('select_tab', 'tab_id');
     });
 </script>
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
