--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,14 +31,13 @@
 						</div>
 					</div>
                     <h5 class="header cyan-text text-darken-3 mt-20">Your Delivery Info</h5>
-					<div class="card horizontal mt-20" id="updadate-delivery-info-form">
+					<div class="card horizontal mt-20" id="update-delivery-info-form">
 						<div class="card-stacked">
                             <div class="card-content">
                             {{ delivery_info_form | materializecss }}
                             </div>
                             <div class="card-action">
-                                <a class="cyan-text mx-20" type="submit">Update Information</a>
-                                <button>Update Information</button>
+                                <button class="btn-flat cyan-text mx-20" type="submit">Update Information</button>
                             </div>
 						</div>
 					</div>
