--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -21,3 +21,8 @@
 .select-dropdown.dropdown-content li.selected span{
     color: #9e9e9e;
 }
+
+.order-table-summary, .order-table-summary, th {
+    font-size: 16px;
+    font-weight: normal;
+}
