--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -52,26 +52,61 @@
                         <a href="{% url 'view_cart' %}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">chevron_left</i></a>
                     </div>
                     <div class="card-content">
-                        <h6>Past Orders</h6>
+                        <h5>Past Orders: {{ orders |length }}</h5>
                     </div>
-                    <div class="collection-wrapper">
-                        <ul class="collection">
-                            <li class="collection-item avatar collection-cart-summary">
-                                <a href="#">
-                                    <img class="circle" src="" alt="">
-                                </a>
-                                <span class="title">Title</span>
-                                <h6>{{Description}}<h6>
-                                {{ orders }}
-                                <a href="#!" class="secondary-content">$ XX.xx</a>
-                            </li>
-                        </ul>
+                    {% if orders %}
+                    <div class="order-table-summary">
+                        {% for order in orders %}
+                        <table class="striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        <a href="#" title="{{ order.order_number }}">Order: {{ order.order_number|truncatechars:6 }}</a>
+                                    </th>
+                                    <th>{{ order.date |date:'M-d-Y' }}</th>
+                                    <th>{{ order.lineitems.all | length }} Items</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for item in order.lineitems.all %}
+                                <tr>
+                                    <td class="center-align">{{ item.product_grind|title }}</td>
+                                    <td class="center-align">
+                                        <a title="{{ item.product.name }}" href="{% url 'product_detail' item.product.id %}">
+                                            {{ item.product.name |truncatechars:12  }}
+                                        </a>
+                                    </td>
+                                    <td class="center-align">{{ item.quantity }}</td>
+                                </tr>
+                                {% endfor %}
+                                <tr>
+                                    <td class="center-align">Total: ${{ order.grand_total }}</td>
+                                    <td>Delivery: ${{ order.delivery_cost }}</td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <hr>
+                        {% endfor %}
                     </div>
-                    <div class="card-content right-align">
+                    {% else %}
+                    <div class="container">
+                        <h6>You have not past orders yet!<br>Check our products and start ordering</h6>
+                    </div>
+                    <div class="col s12 center-align mt-20">
+                        <a class="btn" href="{% url 'products' %}" >Our Products</a>
+                    </div>
+
+
+                    {% endif %}
+
+
+                    <div class="card-content right-align mt-50">
                         <h6 class="mt-20"><strong>Some text</strong></h6>
                         <h6>Some text</h6>
                         <h5><strong>Grand Total: <span class="teal-text text-darken-3">$XX.xx</span></strong></h5>
                     </div>
+                    
                 </div>
             </div>
         </div>
@@ -101,7 +136,7 @@
 {{ block.super }}
 <script type="text/javascript">
     $(document).ready(function(){
-        $('.slider').slider();
+        $('.collapsible').collapsible();
         $('select').material_select();
         $('ul.tabs').tabs('select_tab', 'tab_id');
     });
