--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,7 +110,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="col s12 mt-50">
+                    <div class="col s12 facts-table-container mt-50">
                             <h5 class="center-align  cyan-text text-darken-3">Region Facts</h5>
                             <table class="striped product-detail-table">
                                 <thead>
