--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -13,16 +13,47 @@
     box-shadow: 0 1px 0 0 #4CAF50 !important;
 }
 
-#update-delivery-info-form input.select-dropdown[value="Please select"] {
+#update-delivery-info-form 
+input.select-dropdown[value="Please select"] {
     font-size: 1rem;
     border-bottom: 1px solid #9e9e9e;
 } 
 
-.select-dropdown.dropdown-content li.selected span{
+.select-dropdown.dropdown-content 
+li.selected span{
     color: #9e9e9e;
 }
 
-.order-table-summary, .order-table-summary, th {
-    font-size: 16px;
+.order-summary-header {
+    padding: 1rem;
+}
+
+.collection-header {
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 0rem !important;
+}
+
+.order-line {
+    border-bottom: 1px solid #a7a4a4;
+}
+
+.order-table-summary, 
+.order-table-summary th, 
+.order-summary-wrapper {
+    font-size: 14px;
     font-weight: normal;
+}
+
+.order-summary-wrapper .collapsible {
+    border: 0;
+    margin: 0;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+.order-summary-wrapper .collapsible-body,
+.order-summary-wrapper .collapsible-body .col,
+.order-summary-wrapper .collapsible-header .col {
+    padding: 0.5rem 0rem;
 }
