--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,6 +14,16 @@
 <!-- Processed Order Confirmation -->
 <div class="container">
     <div class="section">
+        {% if from_profile %}
+        <!-- Back to Profile button if coming from Profile page -->
+        <div class="container mt-20">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <a href="{% url 'profile' %}" class="btn waves-effect waves-light deep-purple darken-3"><i class="material-icons left">chevron_left</i>Back To Profile</a>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <div class="row">
             <div class="col s12">
                 <h4 class="header">Your Order Is Complete!</h4>
@@ -148,7 +158,8 @@
             </div>
 
             <div class="col s12 m4 center-align">
-                
+                {% if from_profile %}
+                {% else %}
                 <h5 class="mt-20">Forgot something?</h5>
                 <div class="card">
                     <div class="card-image">
@@ -185,6 +196,7 @@
                         </ul>
                     </div>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
