--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -22,15 +22,16 @@
         <div class="row">
             <div class="col s12 m8">
                 <p>Please complete the following information to complete your order</p>
+                {% if user.is_authenticated %}
+                <p>You're placing this order as <span class="cyan-text text-darken-3">{{ request.user }}</span></p>
+                {% endif %}
 				<form action="{% url 'checkout' %}" method="POST" id="payment-form">
 					{% csrf_token %}
                     <h5 class="header cyan-text text-darken-3 mt-20">User Info</h5>
 					<div class="card horizontal mt-20">
 						<div class="card-stacked">
                             <div class="card-content">
-                            {% if user.is_authenticated %}
-                                {{ order_form.username | materializecss:'icon=fas fa-user' }}
-                            {% endif %}
+                            {{ order_form.username }}
                             {{ order_form.email | materializecss:'icon=far fa-envelope' }}
                             {{ order_form.first_name | materializecss:'custom_size=s12 m6' }}
                             {{ order_form.last_name | materializecss:'custom_size=s12 m6' }}
@@ -81,7 +82,6 @@
                             </div>
 						</div>
 					</div>
-				
                     <div class="submit-button mt-50 right-align">
                         <button id="checkout-button" class="btn waves-effect waves-light deep-purple darken-3">
                             <span class="">Complete Order</span>
@@ -89,7 +89,6 @@
                                 <i class="fas fa-lock"></i>
                             </span>
                         </button>
-                        
                     </div>
 				</form>
             </div>
