--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -18,7 +18,7 @@
             {% endif %}
             
             <div class="input-field col s12 mt-20">
-                <button class="btn waves-effect waves-light deep-purple darken-3" type="submit">{% trans 'Sign Out' %}</button>
+                <button class="btn waves-effect waves-light deep-purple darken-3" id="button-signout" type="submit">{% trans 'Sign Out' %}</button>
             </div>
             <div class="input-field col s12 mt-20">
                 <a class="header cyan-text text-darken-3" href="{% url 'home' %}">Cancel</a>
